--- a/AzimutExportClient/MainWindow.xaml
+++ b/AzimutExportClient/MainWindow.xaml
@@ -5,14 +5,59 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:AzimutExportClient"
         mc:Ignorable="d"
-        Title="MainWindow" Height="800" Width="1200">
+        Title="MainWindow" Height="600" Width="1200"
+        >
+    <Window.Resources>
+        <Style x:Key="TextStyle" TargetType="TextBlock">
+            <Setter Property="FontFamily" Value="Fonts/#PT Serif"/>
+            <Setter Property="VerticalAlignment" Value="Center"/>
+            <Setter Property="FontSize" Value="20"/>
+            <Setter Property="Margin" Value="0, 5, 0, 0"/>
+            <Setter Property="Foreground" Value="White"/>
+        </Style>
+        
+        <Style TargetType="TextBox">
+            <Setter Property="FontFamily" Value="Fonts/#PT Serif"/>
+        </Style>
+        
+        <Style TargetType="ComboBox">
+            <Setter Property="FontFamily" Value="Fonts/#PT Serif"/>
+        </Style>
+        
+        <Style TargetType="Button">
+            <Setter Property="FontFamily" Value="Fonts/#PT Serif"/>
+        </Style>
+        
+        <Style x:Key="FootterButtonStyle" TargetType="Button">
+            <Setter Property="Background" Value="Transparent"/>
+            <Setter Property="Foreground" Value="White"/>
+            <Setter Property="FontSize" Value="18"/>
+            <Setter Property="Template">
+                <Setter.Value>
+                    <ControlTemplate TargetType="Button">
+                        <Border Background="{TemplateBinding Background}" BorderBrush="DarkGray" BorderThickness="1" >
+                            <ContentPresenter HorizontalAlignment="Center" VerticalAlignment="Center"/>
+                        </Border>
+                        <ControlTemplate.Triggers>
+                            <Trigger Property="IsMouseOver" Value="True">
+                                <Setter Property="Background" Value="#00204f"/>
+                            </Trigger>
+                        </ControlTemplate.Triggers>
+                    </ControlTemplate>
+                </Setter.Value>
+            </Setter>
+        </Style>
+        
+        
+    </Window.Resources>
+
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="Auto" />
             <RowDefinition Height="*" />
         </Grid.RowDefinitions>
 
-        <Grid Grid.Row="0" Background="Gray" >
+        <Grid Grid.Row="0" Background="#2b569a" >
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="Auto"/>
                 <ColumnDefinition Width="Auto"/>
@@ -30,7 +75,7 @@
                     Grid.Row="0" 
                     Orientation="Horizontal"
                     HorizontalAlignment="Right">
-                    <TextBlock VerticalAlignment="Center" FontSize="20" Margin="0, 5, 0, 0">
+                    <TextBlock Style="{StaticResource TextStyle}">
                         Номер рейса:
                     </TextBlock>
                     <TextBox 
@@ -44,8 +89,8 @@
                 <StackPanel 
                     Grid.Row="1" 
                     Orientation="Horizontal"
-                    HorizontalAlignment="Right"      >
-                    <TextBlock VerticalAlignment="Center" FontSize="20" Margin="0, 5, 0, 0">
+                    HorizontalAlignment="Right">
+                    <TextBlock Style="{StaticResource TextStyle}">
                         Номер смены:
                     </TextBlock>
                     <TextBox 
@@ -60,15 +105,15 @@
                     Grid.Row="2" 
                     Orientation="Horizontal"
                     HorizontalAlignment="Right">
-                    <TextBlock VerticalAlignment="Center" FontSize="20" Margin="0, 5, 0, 0">
-                        Путь к файлу с расписанием:
+                    <TextBlock 
+                        Name="FilePathTextBlock"
+                        Style="{StaticResource TextStyle}"
+                        Width="400"
+                        TextTrimming="CharacterEllipsis"
+                        Cursor="Hand"
+                        MouseLeftButtonDown="OpenFile_Click">
+                        Путь к файлу с расписанием:&#x0020;&#x0020;&#x2026;
                     </TextBlock>
-                    <TextBox 
-                        FontSize="18"
-                        Width="120"
-                        VerticalContentAlignment="Center"
-                        VerticalAlignment="Bottom"
-                        Margin="10, 0, 0, 0"/>
                 </StackPanel>
                 
                 <!-- <TextBlock  -->
@@ -99,26 +144,29 @@
                 
                 
                 <StackPanel Grid.Row="0" Orientation="Horizontal">
-                    <TextBlock VerticalAlignment="Center" FontSize="20">
+                    <TextBlock 
+                        Style="{StaticResource TextStyle}"
+                        Margin="0">
                         Дни недели расписания:
                     </TextBlock>
                     <ComboBox
                         Width="120"
                         VerticalAlignment="Center"
                         Margin="10, 0, 0, 0"
-                        FontSize="18">
+                        FontSize="18"
+                        SelectedIndex="0">
                         <ComboBoxItem Content="Будние"/>
                         <ComboBoxItem Content="Выходные"/>
                     </ComboBox>
                 </StackPanel>
                 <Button 
                     Grid.Row="1" 
-                    Content="Сформировать расписание" 
-                    FontSize="18" 
-                    Margin="0, 10, 0, 0"
                     VerticalContentAlignment="Center"
-                    Padding="0, 2, 0, 2"
-                    >
+                    Style="{StaticResource FootterButtonStyle}"
+                    Margin="0, 10, 0, 0"
+                    Height="35"
+                    Content="Сформировать расписание" 
+                    Click="startCreatePass">
                 </Button>
             </Grid>
             
@@ -158,14 +206,23 @@
             
         </Grid>
 
-        <Grid Grid.Row="1" Opacity="0.6" IsHitTestVisible="False">
+        <Grid 
+            Grid.Row="1" 
+            Name="ListsGrid"
+            Background="#e6e6e6"
+            Opacity="0.6" 
+            IsHitTestVisible="False"
+            >
 
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="*" />
                 <ColumnDefinition Width="*" />
             </Grid.ColumnDefinitions>
 
-            <Grid Grid.Column="0" Background="Red">
+            <Grid 
+                Grid.Column="0" 
+                Background="White"
+                Margin="10,10,0,10">
 
                 <Grid.RowDefinitions>
                     <RowDefinition Height="*" />
@@ -176,7 +233,7 @@
                 <ListBox
                     Grid.Row="0"
                     Name="routesForBuildingTemplate"
-                    Background="Aquamarine"
+                    ScrollViewer.CanContentScroll="False"
                     HorizontalAlignment="Stretch"
                     VerticalAlignment="Stretch"
                     Margin="15,5,5,5">
@@ -184,11 +241,11 @@
                         <DataTemplate>
                             <StackPanel Orientation="Horizontal">
                                 <TextBlock
-                                    Background="Red"
+                                    
                                     Text="{Binding WPT_ID}"
                                     Margin="5" />
                                 <TextBlock
-                                    Background="Red"
+                                   
                                     Text="{Binding WPT_NAME}"
                                     Margin="5" />
                             </StackPanel>
@@ -199,7 +256,6 @@
 
                 <Grid
                     Grid.Row="1"
-                    Background="Orange"
                     Margin="0 5 0 5">
                     <Grid.ColumnDefinitions>
                         <ColumnDefinition Width="2*" />
@@ -209,6 +265,7 @@
                     <TextBox
                         Grid.Column="0"
                         Margin="15 0 5 0" 
+                        FontSize="18"
                         VerticalContentAlignment="Center"
                         />
                     <Button
@@ -220,10 +277,11 @@
                 </Grid>
             </Grid>
 
-            <Grid Grid.Column="1" Background="SandyBrown">
+            <Grid Grid.Column="1" Background="White"
+                  Margin="0,10,10,10">
                 <ListBox
                     Name="allRoutesFromDataBase"
-                    Background="CadetBlue"
+                    ScrollViewer.CanContentScroll="False"
                     HorizontalAlignment="Stretch"
                     VerticalAlignment="Stretch"
                     Margin="5,5,15,5">
@@ -231,11 +289,9 @@
                         <DataTemplate>
                             <StackPanel Orientation="Horizontal">
                                 <TextBlock
-                                    Background="Red"
                                     Text="{Binding WPT_ID}"
                                     Margin="5" />
                                 <TextBlock
-                                    Background="Red"
                                     Text="{Binding WPT_NAME}"
                                     Margin="5" />
                             </StackPanel>
