--- a/AzimutExportClient/MainWindow.xaml
+++ b/AzimutExportClient/MainWindow.xaml
@@ -29,18 +29,25 @@
         </Style>
         
         <Style x:Key="FootterButtonStyle" TargetType="Button">
+            <Setter Property="FontFamily" Value="Fonts/#PT Serif"/>
             <Setter Property="Background" Value="Transparent"/>
             <Setter Property="Foreground" Value="White"/>
             <Setter Property="FontSize" Value="18"/>
             <Setter Property="Template">
                 <Setter.Value>
                     <ControlTemplate TargetType="Button">
-                        <Border Background="{TemplateBinding Background}" BorderBrush="DarkGray" BorderThickness="1" >
+                        <Border 
+                            Background="{TemplateBinding Background}"
+                            BorderBrush="{TemplateBinding BorderBrush}" 
+                            BorderThickness="1" 
+                            UseLayoutRounding="True">
                             <ContentPresenter HorizontalAlignment="Center" VerticalAlignment="Center"/>
                         </Border>
+                        
                         <ControlTemplate.Triggers>
                             <Trigger Property="IsMouseOver" Value="True">
                                 <Setter Property="Background" Value="#00204f"/>
+                                <Setter Property="BorderBrush" Value="#00193f"/>
                             </Trigger>
                         </ControlTemplate.Triggers>
                     </ControlTemplate>
@@ -48,7 +55,31 @@
             </Setter>
         </Style>
         
-        
+        <Style x:Key="BottomButtonStyle" TargetType="Button">
+            <Setter Property="FontFamily" Value="Fonts/#PT Serif"/>
+            <Setter Property="Template">
+                <Setter.Value>
+                    <ControlTemplate TargetType="Button">
+                        <Border 
+                            Background="{TemplateBinding Background}" 
+                            BorderBrush="DarkGray" BorderThickness="1" 
+                            Padding="0, 5, 0, 5"
+                            UseLayoutRounding="True">
+                            <ContentPresenter 
+                                HorizontalAlignment="Center" 
+                                VerticalAlignment="Center"
+                                />
+                        </Border>
+                        <ControlTemplate.Triggers>
+                            <Trigger Property="IsMouseOver" Value="True">
+                                <Setter Property="Background" Value="#00204f"/>
+                                <Setter Property="Foreground" Value="White"/>
+                            </Trigger>
+                        </ControlTemplate.Triggers>
+                    </ControlTemplate>
+                </Setter.Value>
+            </Setter>
+        </Style>
     </Window.Resources>
 
     <Grid>
@@ -115,33 +146,17 @@
                         Путь к файлу с расписанием:&#x0020;&#x0020;&#x2026;
                     </TextBlock>
                 </StackPanel>
-                
-                <!-- <TextBlock  -->
-                <!--     Grid.Row="1"  -->
-                <!--     FontSize="20" -->
-                <!--     HorizontalAlignment="Right"> -->
-                <!--     Номер смены: -->
-                <!-- </TextBlock> -->
-                <!-- <TextBlock  -->
-                <!--     Grid.Row="2"  -->
-                <!--     FontSize="20" -->
-                <!--     HorizontalAlignment="Right"> -->
-                <!--     Дни недели расписания: -->
-                <!-- </TextBlock> -->
-                <!-- <TextBlock  -->
-                <!--     Grid.Row="3"  -->
-                <!--     FontSize="20" -->
-                <!--     HorizontalAlignment="Right"> -->
-                <!--     Путь к файлу с расписанием: -->
-                <!-- </TextBlock> -->
             </Grid>
             
-            <Grid Grid.Column="1" VerticalAlignment="Center" Margin="20, 0, 0, 0">
+            <Grid 
+                Grid.Column="1" 
+                VerticalAlignment="Center" 
+                Margin="20, 0, 0, 0">
+                
                 <Grid.RowDefinitions>
                     <RowDefinition Height="Auto"/>
                     <RowDefinition Height="Auto"/>
                 </Grid.RowDefinitions>
-                
                 
                 <StackPanel Grid.Row="0" Orientation="Horizontal">
                     <TextBlock 
@@ -159,6 +174,7 @@
                         <ComboBoxItem Content="Выходные"/>
                     </ComboBox>
                 </StackPanel>
+                
                 <Button 
                     Grid.Row="1" 
                     VerticalContentAlignment="Center"
@@ -169,41 +185,6 @@
                     Click="startCreatePass">
                 </Button>
             </Grid>
-            
-            <!-- <Grid Grid.Column="1" Margin="10,5,0,5"> -->
-            <!--     <Grid.RowDefinitions> -->
-            <!--         <RowDefinition Height="*" /> -->
-            <!--         <RowDefinition Height="*" /> -->
-            <!--         <RowDefinition Height="*" /> -->
-            <!--         <RowDefinition Height="*" /> -->
-            <!--     </Grid.RowDefinitions> -->
-            <!--      -->
-            <!--     <TextBox  -->
-            <!--         Grid.Row="0"  -->
-            <!--         FontSize="20" -->
-            <!--         Width="100" -->
-            <!--         VerticalContentAlignment="Center"/> -->
-            <!--      -->
-            <!--     <TextBox  -->
-            <!--         Grid.Row="1"  -->
-            <!--         FontSize="20" -->
-            <!--         Width="100" -->
-            <!--         VerticalContentAlignment="Center"/> -->
-            <!--      -->
-            <!--     <ComboBox Grid.Row="2" > -->
-            <!--         <ComboBoxItem Content="Будние" /> -->
-            <!--         <ComboBoxItem Content="Выходные" /> -->
-            <!--     </ComboBox> -->
-            <!-- -->
-            <!--     <TextBox  -->
-            <!--         Grid.Row="3"  -->
-            <!--         FontSize="20" -->
-            <!--         Width="100" -->
-            <!--         VerticalContentAlignment="Center"/> -->
-            <!-- </Grid> -->
-            
-            
-            
         </Grid>
 
         <Grid 
@@ -211,8 +192,7 @@
             Name="ListsGrid"
             Background="#e6e6e6"
             Opacity="0.6" 
-            IsHitTestVisible="False"
-            >
+            IsHitTestVisible="False">
 
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="*" />
@@ -222,14 +202,15 @@
             <Grid 
                 Grid.Column="0" 
                 Background="White"
-                Margin="10,10,0,10">
+                Margin="10,10,5,10">
+                
+                
 
                 <Grid.RowDefinitions>
                     <RowDefinition Height="*" />
                     <RowDefinition Height="Auto" />
                 </Grid.RowDefinitions>
-
-
+                
                 <ListBox
                     Grid.Row="0"
                     Name="routesForBuildingTemplate"
@@ -241,22 +222,20 @@
                         <DataTemplate>
                             <StackPanel Orientation="Horizontal">
                                 <TextBlock
-                                    
                                     Text="{Binding WPT_ID}"
                                     Margin="5" />
                                 <TextBlock
-                                   
                                     Text="{Binding WPT_NAME}"
                                     Margin="5" />
                             </StackPanel>
                         </DataTemplate>
                     </ListBox.ItemTemplate>
                 </ListBox>
-
-
+                
                 <Grid
                     Grid.Row="1"
                     Margin="0 5 0 5">
+                    
                     <Grid.ColumnDefinitions>
                         <ColumnDefinition Width="2*" />
                         <ColumnDefinition Width="1*" />
@@ -270,6 +249,7 @@
                         />
                     <Button
                         Grid.Column="1"
+                        Style="{StaticResource BottomButtonStyle}"
                         FontSize="20"
                         Content="Добавить"
                         Padding="0, 5, 0, 5"
@@ -277,8 +257,11 @@
                 </Grid>
             </Grid>
 
-            <Grid Grid.Column="1" Background="White"
-                  Margin="0,10,10,10">
+            <Grid 
+                Grid.Column="1"
+                Background="White"
+                Margin="5,10,10,10">
+                
                 <ListBox
                     Name="allRoutesFromDataBase"
                     ScrollViewer.CanContentScroll="False"
@@ -299,9 +282,6 @@
                     </ListBox.ItemTemplate>
                 </ListBox>
             </Grid>
-            
         </Grid>
-
     </Grid>
-
 </Window>
